--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
-<!-- Smartsupp Live Chat script -->
-<script type="text/javascript">
-var _smartsupp = _smartsupp || {};
-_smartsupp.key = 'bb16c79c02a98d6387ee2935d0f33ad5ee306171';
-window.smartsupp||(function(d) {
-  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-  c.type='text/javascript';c.charset='utf-8';c.async=true;
-  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-})(document);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator Fun</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <meta property="twitter:title" content="Calculator Fun">
+    <meta property="twitter:description" content="A website made by Connor Burnside">
+    <meta property="twitter:image" content="">
+    <meta name="theme-color" content="#F1F1F1">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+   <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#2d89ef">
+<meta name="theme-color" content="#ffffff">
+   <body style="background-color:#2b2a33;">
+   </body>
+<body>
+    <img src="CalculatorAndFun.png" id="banner">
+    <div class="buttons">
+        <div type="download" class="download">
+            <a class="button__text" href="/calculator" target="_blank">Calculator</a>
+            <span class="button__icon">
+                <ion-icon name="calculator-outline"></ion-icon>
+            </span>
+        </div>
+        <div type="discord" class="discord">
+            <a class="button__text" href="/chat" target="_blank">Chat</a>
+            <span class="button__icon">
+                <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+            </span>
+        </div>
+        <div type="test" class="test">
+            <a class="button__text" href="/wip" target="_blank">W.I.P</a>
+            <span class="button__icon">
+                <ion-icon name="terminal-outline"></ion-icon>
+            </span>
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
+</body>
+</html>
