--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Calculator Fun</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta property="twitter:title" content="Calculator Fun">
-    <meta property="twitter:description" content="A website made by Connor Burnside">
+    <meta property="twitter:title" content="Chalk">
+    <meta property="twitter:description" content="A website made by Luke Gross (helped by Connor Burnside)">
     <meta property="twitter:image" content="">
     <meta name="theme-color" content="#F1F1F1">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -21,26 +21,12 @@
    </body>
 <body>
     <img src="CalculatorAndFun.png" id="banner">
-    <div class="buttons">
-        <div type="download" class="download">
-            <a class="button__text" href="/calculator" target="_blank">Calculator</a>
-            <span class="button__icon">
-                <ion-icon name="calculator-outline"></ion-icon>
-            </span>
-        </div>
         <div type="discord" class="discord">
             <a class="button__text" href="/chat" target="_blank">Chat</a>
             <span class="button__icon">
                 <ion-icon name="chatbox-ellipses-outline"></ion-icon>
             </span>
         </div>
-        <div type="test" class="test">
-            <a class="button__text" href="/wip" target="_blank">W.I.P</a>
-            <span class="button__icon">
-                <ion-icon name="terminal-outline"></ion-icon>
-            </span>
-        </div>
-    </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
