--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Fun</title>
+    <title>Chalk</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta property="twitter:title" content="Chalk">
@@ -20,7 +20,7 @@
    <body style="background-color:#2b2a33;">
    </body>
 <body>
-    <img src="CalculatorAndFun.png" id="banner">
+    <img src="Chalk.png" id="banner">
         <div type="discord" class="discord">
             <a class="button__text" href="/chat" target="_blank">Chat</a>
             <span class="button__icon">
